--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -10,7 +10,7 @@
         <image src="../../images/icon_calendar.png" class="icon-statistics header-icon"></image>
         <navigator url="/pages/book_setting/book_setting" >
             <view class="avatars-layout" wx:for="{{avatars}}">
-                <image src="{{item}}"  class="avatars-account" style="margin-left: {{ index > 0 ? '-12px' : ''}}"></image>
+                <image src="{{item}}"  class="avatars-account {{ index > 0 ? 'avatars-margin' : ''}}" ></image>
             </view>
         </navigator>
         
@@ -39,32 +39,38 @@
 
 
     <!-- 记录列表 -->
-    <view class="reocrd-list">
-        <view class="record-item">
+    <scroll-view class="reocrd-list" scroll-y>
+        <view class="record-item" wx:for="{{recordList}}">
             <view class="day-record">
-                <text class="day-date">2018年5月28日</text>                
+                <text class="day-date">{{item.date}} {{item.week}}</text>    
+
                 <view class="day-output-layout">
                     <text>支出：</text>
-                    <text class="day-output">123</text>
+                    <text class="day-output">{{filters.toFix(item.expenditureAmount)}}</text>
                 </view>                
 
                 <view class="day-input-layout">
                     <text>收入：</text>
-                    <text class="day-input">123</text>
-                </view>
+                    <text class="day-input">{{filters.toFix(item.incomeAmount)}}</text>
+                </view>                
             </view>
 
-            <view class="rocord-content">
-                <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4"  class="record-avatars"></image>
-                <text class="record-title">吃饭（早饭）</text>
-                <text class="record-money day-output">12.00</text>
+            <view class="rocord-content {{record.remark != ''? 'rocord-content-with-remark' : ''}}"   wx:for="{{item.items}}" wx:for-item="record">
+                <view class="record-info" >
+                    <image src="{{record.avatorUrls[0]}}"  class="record-avatars" wx:if="{{accountInfo.multipleType}}"></image>
+                    <text class="record-title">{{record.mainType}} </text>
+                    <text class="record-secondary-title" wx:if="{{record.secondaryType != ''}}">({{record.secondaryType}})</text>
+                    <text class="record-money day-input {{record.recordType == 2 ? 'day-output' : ''}} ">{{filters.toFix(record.amount)}}</text>
+                </view>
+                <text wx:if="{{record.remark != ''}}" class="record-remark">{{record.remark}}</text>
             </view>
         </view>
-    </view>
+    </scroll-view>
 
 
     <!-- 记一笔 -->
     <button class="btn_record" bindtap="record">记一笔</button>
+       
     
 
     <view wx:if="{{showAuthorize}}" class="authorize-dialog">
