--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -26,6 +26,10 @@
     margin-left: 36rpx;
 }
 
+.avatars-margin {
+    margin-left: -12px;
+}
+
 .avatars-account {
     width: 54rpx;
     height: 54rpx;
@@ -71,6 +75,10 @@
 }
 
 /* 记录列表 */
+.reocrd-list {
+    height: 880rpx;
+}
+
 .record-item {   
     margin: 15px 0;
     background-color: #fff;
@@ -107,23 +115,43 @@
 
 .rocord-content {
     height: 45px;
-    line-height: 45px;
     border-bottom: 1px solid #e1e1e1;
+    position: relative;
+}
+
+.rocord-content-with-remark {
+    height: 65px;
+}
+
+.record-info {
+    height: 45px;
+    line-height: 45px;
+}
+
+.record-remark {
+    font-size: 12px;
+    color: #888;
+    position: absolute;
+    bottom: 3px;
 }
 
 .record-avatars {
     width: 64rpx;
     height: 64rpx;
     border-radius: 32rpx;
-    margin-top: 8px;
+    margin-top: 5px;
     float: left;
     background-color: #fff;
     border: 1px solid #d1d1d1;
+    margin-right: 15px;
 }
 
 .record-title {
-    margin-left: 14px;
     font-size: 16px;
+}
+
+.record-secondary-title {
+    font-size: 14px;
 }
 
 .record-money {
@@ -131,17 +159,21 @@
     margin-right: 14px;
 }
 
+
+
 /* 记一笔 */
 .btn_record {
     width: 70%;
     margin: 0 15%;
+    height: 40px;
     background-color: #fff;
     border: 1px solid #f00;
     border-radius: 15rpx;
     text-align: center;
     color: #f00;
-    position: absolute;
-    bottom: 40px;
+    position: fixed;
+    display: block;
+    bottom: 10px;
 }
 
 
@@ -169,3 +201,4 @@
     margin-bottom: 10px;
     display: block;
 }
+
