--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -128,11 +128,24 @@
     line-height: 45px;
 }
 
-.record-remark {
+.record-remark-layout {
     font-size: 12px;
     color: #888;
     position: absolute;
     bottom: 3px;
+    width: 100%;
+}
+
+.record-parters {
+    float: right;
+}
+
+.record-parters-avatars {
+    width: 16px;
+    height: 16px;
+    border-radius: 8px;
+    position:relative;
+    top: 2px;
 }
 
 .record-avatars {
