【调试】账本信息

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -8,7 +8,7 @@
         </navigator>    
         <image src="../../images/icon_statistics.png" class="icon-statistics header-icon"></image>
         <image src="../../images/icon_calendar.png" class="icon-statistics header-icon"></image>
-        <navigator url="/pages/book_setting/book_setting" >
+        <navigator url="/pages/book_setting/book_setting?bookId={{accountInfo.id}}" >
             <view class="avatars-layout" wx:for="{{avatars}}">
                 <image src="{{item}}"  class="avatars-account {{ index > 0 ? 'avatars-margin' : ''}}" ></image>
             </view>
