--- a/pages/book_setting/book_setting.wxml
+++ b/pages/book_setting/book_setting.wxml
@@ -1,42 +1,31 @@
 <!--pages/book_setting/book_setting.wxml-->
+<wxs module="filters" src="../../utils/filters.wxs"></wxs>
 <view class="container">    
     <view class="header-layout">
-        <image src="https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=3468481793,3455309356&fm=27&gp=0.jpg" class="user_avatar" ></image>
-        <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4" class="user_avatar" ></image>
-        <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4" class="user_avatar" ></image>      
-        <image src="https://ss1.bdstatic.com/70cFuXSh_Q1YnxGkpoWK1HF6hhy/it/u=3468481793,3455309356&fm=27&gp=0.jpg" class="user_avatar" ></image>
-        <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4" class="user_avatar" ></image>
-        <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4" class="user_avatar" ></image>     
+        <image src="{{item.avatarUrl}}" class="user_avatar" wx:for="{{bookInfo.participants}}"></image>
     </view>
 
-    <view class="weui-cells weui-cells_after-title" style="margin-top: 15px;">
-        <view class="weui-cell" bindtap="editName">
+    <navigator class="weui-cells weui-cells_after-title" style="margin-top: 15px;">
+        <navigator url="/pages/edit_name/edit_name?bookId={{bookInfo.id}}&type=1" class="weui-cell weui-cell_access" hover-class="weui-cell_active"></navigator>
             <view class="weui-cell__bd">账本名字</view>
-            <view class="weui-cell__ft weui-cell__ft_in-access">Something</view>
-        </view>
-        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+            <view class="weui-cell__ft weui-cell__ft_in-access">{{bookInfo.name}}</view>
+        </navigator>
+        <navigator url="/pages/member_management/member_management?bookId={{bookInfo.id}}" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
             <view class="weui-cell__bd">成员管理</view>
-            <view class="weui-cell__ft weui-cell__ft_in-access">2人</view>
+            <view class="weui-cell__ft weui-cell__ft_in-access">{{bookInfo.participants.length}}人</view>
         </navigator>
         <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
             <view class="weui-cell__bd">周期帐</view>
             <view class="weui-cell__ft weui-cell__ft_in-access">两笔</view>
         </navigator>
-        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <navigator url="/pages/budget/budget?bookId={{bookInfo.id}}&totalBudget={{bookInfo.budgetaryAmount}}&surplusBudgetaryAmount={{bookInfo.surplusBudgetaryAmount}}" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
             <view class="weui-cell__bd">预算设置</view>
-            <view class="weui-cell__ft weui-cell__ft_in-access">1000</view>
+            <view class="weui-cell__ft weui-cell__ft_in-access">{{filters.toFix(bookInfo.budgetaryAmount)}}</view>
         </navigator>
         <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
             <view class="weui-cell__bd">设为默认账本</view>
-            <switch class="weui-cell__ft "/>
+            <switch class="weui-cell__ft" checked="{{bookInfo.defaultBook}}"/>
         </navigator>
     </view>
 
-    <view class="dialog-container" wx:if="{{editName}}">
-        <view class="dialog">
-            <text class="dialog-title">账本名字</text>        
-            <input placeholder="Something" auto-focus class="edit_input"/>  
-            <button class="weui-btn" type="primary" bindtap="changeName">完成</button>     
-        </view>
-    </view>
 </view>    
