--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,21 +1,21 @@
 <!--pages/my/my.wxml-->
 <view class="container">
     <view class="header">
-        <image src="https://avatars1.githubusercontent.com/u/10338837?s=460&v=4" class="user_avatar"></image>
-        <text class="user_name">Something</text>
+        <image src="{{userInfo.avatarUrl}}" class="user_avatar"></image>
+        <text class="user_name">{{userInfo.nickName}}</text>
     </view>
     <view class="statistic-layout">
         <view class="statistic-pannel">
             <text class="statistic-title">连续记账</text>
-            <text class="statistic-num">8</text><text>天</text>
+            <text class="statistic-num">{{statistics.continuityAccountDays}}</text><text>天</text>
         </view>
         <view class="statistic-pannel middle-pannel">
             <text class="statistic-title">累计记账</text>
-            <text class="statistic-num">8</text><text>天</text>
+            <text class="statistic-num">{{statistics.totalRecordTimes}}</text><text>笔</text>
         </view>
         <view class="statistic-pannel">
             <text class="statistic-title">累计记账</text>
-            <text class="statistic-num">8</text><text>天</text>
+            <text class="statistic-num">{{statistics.totalRecordDays}}</text><text>天</text>
         </view>
     </view>
 
