--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -20,7 +20,7 @@
     </view>
 
     <view class="weui-cells weui-cells_after-title" style="margin-top: 15px;">
-        <navigator url="/pages/books/books" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <navigator url="/pages/book_list/book_list" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
             <view class="weui-cell__hd">
                 <image src="../../images/icon_books.png" style="margin-right: 5px;vertical-align: middle;width:20px; height: 20px;"></image>
             </view>
