--- a/pages/book_setting/book_setting.wxml
+++ b/pages/book_setting/book_setting.wxml
@@ -14,7 +14,7 @@
             <view class="weui-cell__bd">成员管理</view>
             <view class="weui-cell__ft weui-cell__ft_in-access">{{bookInfo.participants.length}}人</view>
         </navigator>
-        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active" style="display: none;">
             <view class="weui-cell__bd">周期帐</view>
             <view class="weui-cell__ft weui-cell__ft_in-access">两笔</view>
         </navigator>
